--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
